3 pages generated; back btn in header

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,17 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Ionic 4 start a1
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+Home    <p>Ionic documentation <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> </p>
+
+<ion-button routerLink="/choose-mode" routerDirection="forward">choose mode</ion-button>
+<ion-button routerLink="/learn-mode" routerDirection="forward">learn mode</ion-button>
+<ion-button routerLink="/practice-mode" routerDirection="forward">practice mode</ion-button>
   </div>
 </ion-content>
