pict added to about-page

--- a/src/app/pages/about-page/about-page.page.html
+++ b/src/app/pages/about-page/about-page.page.html
@@ -10,4 +10,5 @@
 
 <ion-content>
 The app ionic4-start-a1 demonstrates the navigation through the pages with the angular router.
+<ion-img src="/assets/shapes.svg"></ion-img>
 </ion-content>
