--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,8 +18,8 @@ Home    <p>Ionic documentation <a target="_blank" rel="noopener" href="https://i
 
 <ion-button routerLink="/choose-mode" routerDirection="forward" expand="block">choose mode</ion-button>
 
-<ion-button routerLink="/learn-mode" routerDirection="forward" expand="block">learn mode</ion-button>
+<ion-button routerLink="/learn-mode" routerDirection="forward" expand="block" size="large">learn mode</ion-button>
 
-<ion-button routerLink="/practice-mode" routerDirection="forward" expand="block">practice mode</ion-button>
+<ion-button routerLink="/practice-mode" routerDirection="forward" expand="block" size="large">practice mode</ion-button>
   </div>
 </ion-content>
