pictures added to learn-mode-page

--- a/src/app/pages/choose-mode/choose-mode.page.html
+++ b/src/app/pages/choose-mode/choose-mode.page.html
@@ -8,5 +8,15 @@
 </ion-header>
 
 <ion-content>
-ion-content of choose-mode page
+
+
+<div class="ion-padding">
+<ion-button routerLink="/learn-mode" routerDirection="forward" expand="block" size="large">learn mode</ion-button>
+
+<p>
+</p>
+
+
+<ion-button routerLink="/practice-mode" routerDirection="forward" expand="block" size="large">practice mode</ion-button>
+</div>
 </ion-content>
