--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,10 +16,6 @@
   <div class="ion-padding">
 Home    <p>Ionic documentation <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> </p>
 
-<ion-button routerLink="/choose-mode" routerDirection="forward" expand="block">choose mode</ion-button>
-
-<ion-button routerLink="/learn-mode" routerDirection="forward" expand="block" size="large">learn mode</ion-button>
-
-<ion-button routerLink="/practice-mode" routerDirection="forward" expand="block" size="large">practice mode</ion-button>
+<ion-button routerLink="/choose-mode" routerDirection="forward" expand="block" size="large">choose mode</ion-button>
   </div>
 </ion-content>
